--- a/HeavenPlus/HeavenPlusEditor/MainForm.zh-CN.resx
+++ b/HeavenPlus/HeavenPlusEditor/MainForm.zh-CN.resx
@@ -117,16 +117,26 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Msg0" xml:space="preserve">
-    <value>This will discard the current project, continue?</value>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="File_ToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>44, 21</value>
   </data>
-  <data name="Msg_Error" xml:space="preserve">
-    <value>Error</value>
+  <data name="File_ToolStripMenuItem.Text" xml:space="preserve">
+    <value>文件</value>
   </data>
-  <data name="Msg_Info" xml:space="preserve">
-    <value>Information</value>
+  <data name="NewProject_File_ToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>152, 22</value>
   </data>
-  <data name="Msg_Warning" xml:space="preserve">
-    <value>Warning</value>
+  <data name="Load_File_ToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>152, 22</value>
+  </data>
+  <data name="Save_File_ToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>152, 22</value>
+  </data>
+  <data name="Exit_File_ToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>152, 22</value>
+  </data>
+  <data name="$this.Text" xml:space="preserve">
+    <value>华夏天堂+数据编辑器</value>
   </data>
 </root>
